<resources>
    <string name="app_name">voice of heart</string>
    <string name="exit">exit</string>
    <string name="start">start</string>
    <string name="frienship_shayari">frienship shayari</string>
    <string name="love_shayari">love shayari</string>
    <string name="EXIT">EXIT</string>
    <string name="motivational_shayari">motivational shayari</string>
    <string name="shayari_2">shayari 2</string>
    <string name="shayari_1">shayari 1</string>
    <string name="shayari_3">shayari 3</string>
    <string name="shayari_4">shayari 4</string>
    <string name="shayari_5">shayari 5</string>
    <string name="shayari_6">shayari 6</string>
    <string name="shayari_7">shayari 7</string>
    <string name="shayari_8">shayari 8</string>
    <string name="shayari_9">shayari 9</string>
    <string name="shayari_10">shayari 10</string>
    <string name="shayari_11">shayari 11</string>
    <string name="shayari_12">shayari 12</string>
    <string name="shayari_13">shayari 13</string>
    <string name="shayari_14">shayari 14</string>
    <string name="shayari_15">shayari 15</string>
    <string name="shayari_16">shayari 16</string>
    <string name="shayari_17">shayari 17</string>
    <string name="shayari_18">shayari 18</string>
    <string name="shayari_19">shayari 19</string>
    <string name="shayari_20">shayari 20</string>
    <string name="shayari_21">shayari_21</string>
    <string name="shayari_22">shayari 22</string>
    <string name="shayari_23">shayari_23</string>
    <string name="shayari_24">shayari_24</string>
    <string name="shayari_25">shayari_25</string>
    <string name="shayari_26">shayari_26</string>
    <string name="shayari_27">shayari_27</string>
    <string name="shayari_28">shayari 28</string>
    <string name="shayari_29">shayari 29</string>
    <string name="shayari_30">shayari 30</string>
    <string name="shayari1">मिल नहीं पाता तो क्या हुआ, मोहब्बत तो तुमसे फिर भी बेहिसाब करता हूँ !</string>
    <string name="shayari2">भूल जाता हूँ मैं मंजिल का पता, जब घर से तुझे याद करके निकलता हूँ !</string>
    <string name="shayari3">है इश्क तो फिर असर भी होगा, जितना है इधर उधर भी होगा ।</string>
    <string name="shayari4">सबसे अच्छा पल वही जो साथ तेरे गुजरा, बाकी तो हम जिन्दगी बस जीए जा रहे थे !</string>
    <string name="shayari5">मोहब्बत तो हमेशा तुझी से रहेगी, चाहे तुम नाराज रहो चाहे नजर अंदाज करो !</string>
    <string name="shayari6">तेरे इश्क में में इस तरह नीलाम हो जाऊँ, आखरी हो तेरी बोली और में तेरे नाम हो जाऊ !</string>
    <string name="shayari7">मोहब्बत का कोई रंग नही फिर भी वो रंगीन है, प्यार का कोई चेहरा नही फिर भी वो हसीन हैं !</string>
    <string name="shayari8">दिखने में वो बहुत गरीब थी साहब पर, उसकी हँसी किसी शहजादी से कम नहीं थी !</string>
    <string name="shayari9">मुझे तू चाहे तेरा साथ चाहिए जिसे थाम कर, मैं पूरी जिंदगी बिता दूँ वो वाला हाथ चाहिए !</string>
    <string name="shayari10">जो इंसान आपको खुश रख सकता है, उससे ज्यादा अच्छा आपके लिए कोई नहीं हो सकता !</string>
    <string name="shayari11">जिसे सोच कर ही चहरे पर खुशी आ जाये, वो खूबसूरत एहसास हो तुम ।</string>
    <string name="shayari12">कहने को तो मेरा दिल एक है लेकिन, जिसको दिल दिया है वो हजारो में एक है !</string>
    <string name="shayari13">मुझे बस तू चाहिये, ये मत पूछ क्यों चाहिए !</string>
    <string name="shayari14">तुम्हें दिल में हजार बार याद करता हूँ, मैं तुम्हें तुमसे ज्यादा प्यार करता हूँ ।</string>
    <string name="shayari15">याद बनकर जो तू मेरे साथ रहती है तेरे इस एहसान का सौ बार शुक्रिया !</string>
    <string name="shayari16">तुम्हारा तो गुस्सा भी इतना प्यारा है की, दिल करता है दिनभर तुम्हे तंग करता रहूँ ।</string>
    <string name="shayari17">आप की खा़तिर अगर हम लूट भी लें आसमाँ, क्या मिलेगा चंद चमकीले से शीशे तोड़ के !</string>
    <string name="shayari18">सिर्फ अश्क ही गवाही दे सकते है मेरी, की दिल कितनी शिद्दत से याद करता है तुझे !</string>
    <string name="shayari19">मैं गलती करूँ तब भी मुझे सीने से लगा ले, कोई ऐसा चाहिये जो मेरे हर नखरे उठा ले।</string>
    <string name="shayari20">अगर बिकने पे आ जाओ तो घट जाते हैं दाम अक्सर, न बिकने का इरादा हो तो कीमत और बढ़ती है !</string>
    <string name="shayari21">ये जिंदगी हसीं है इससे प्यार करो, अभी है रात तो सुबह का इंतजार करो, वो पल भी आएगा जिसकी ख्वाहिश है आपको, रब पर रखो भरोसा वक्त पर एतबार करो।</string>
    <string name="shayari22">लक्ष्य को पाने के लिए यदि हम तन, मन और धन लगा देते हैं, सच कहता हूं दोस्तों, कुंडली के सितारे भी अपनी जगह बदल देते हैं।</string>
    <string name="shayari23">वक्त से लड़कर जो नसीब बदल दे, इंसान वही जो अपनी तकदीर बदल दे, कल क्या होगा कभी मत सोचो, क्या पता कल वक्त खुद अपनी तस्वीर बदल ले।</string>
    <string name="shayari24">अगर अब भी खून ना खौला तो खून नहीं वो पानी है जो जवानी अपने देश और माँ बाप के काम ना आए बेकार वो जवानी है</string>
    <string name="shayari25">जिसकी सोच में खुद्दारी की महक है, जिसके इरादों में हौसले की मिठास है, और जिसकी नियत में सच्चाई का स्वाद है, उसकी पूरी जिन्दगी महकता हुआ गुलाब है।</string>
    <string name="shayari26">अगर इन्सान शीक्षा से पहले संस्कार, ब्यापार से पहले व्यवहार, भागवान से पहले माता पिता को पहचान ले तो, ज़िन्दगी में कभी कोई कठिनाई नहीं आएगी</string>
    <string name="shayari27">ज़मीर जिन्दा रख, कबीर जिंदा रख, सुल्तान भी बन जाये तो, दिल में फ़कीर जिंदा रख, हौसले के तरकश में कोशिश का वो तीर जिंदा रख, हार जा चाहे जिंदगी में सब कुछ, मगर फिर से जीतने की उम्मीद जिंदा रख।</string>
    <string name="shayari28">ताल्लुक़ कौन रखता है किसी नाकाम से लेकिन, मिले जो कामयाबी सारे रिश्ते बोल पड़ते हैं, मेरी खूबी पे रहते हैं यहां, अहल-ए-ज़बां ख़ामोश, मेरे ऐबों पे चर्चा हो तो, गूंगे बोल पड़ते हैं।</string>
    <string name="shayari41">दोस्ती ग़ज़ल है गाने के लिए, दोस्ती नगमा है सुनाने के लिए, ये वो जज़बा है जो सब को नहीं मिलता, क्योंकि आप जैसा दोस्त चाहिए निभाने के लिए।</string>
    <string name="shayari42">जब आपकी पलकों पर रह जाये कोई, आपकी साँसों पर नाम लिख जाये कोई, चलो वादा रहा भूल जाना हमें, अगर हमसे अच्छा दोस्त मिल जाये कोई।</string>
    <string name="shayari43">दोस्त ज़िन्दगी का चाँद होता है, दिल ज़मीन का आसमान होता है, बदनसीब वो होते हैं जिनका कोई दोस्त नहीं, क्योंकि दोस्त तो धड़कते दिल की जान होता है।</string>
    <string name="shayari44">तुम सदा मुस्कुराते रहो यह तमन्ना है हमारी, हर दुआ में मांगी है बस खुशी तुम्हारी, तुम सारी दुनिया को दोस्त बना कर देख लो, फिर भी महसूस करोगे कमी हमारी।</string>
    <string name="shayari45">लोग कहते हैं ज़मीन पर किसी को खुदा नहीं मिलता, शायद उन्हें दोस्त कोई तुम सा नहीं मिलता, किस्मत वालों को ही मिलती है पनाह किसी के दिल में, यूँ हर शख्स को तो जन्नत का पता नहीं मिलता।</string>
    <string name="shayari46">जिक्र हुआ जब खुदा की रहमतों का, हमने खुद को खुश नसीब पाया, तमन्ना थी एक प्यारे से दोस्त की, खुदा खुद दोस्त बनकर चला आया।</string>
    <string name="shayari47">हर नमी में तेरी कमी तो रहेगी, आँखे कुछ नम तो रहेगी, ज़िन्दगी को हम कितना भी सवांरेगे, हमेंशा आप जैसे दोस्त की कमी रहेगी.</string>
    <string name="shayari48">यार हर मुखड़े की चमकान होती है, यारी ही सुख-दुःख की पहचान होती है, कोई रूठ भी जाये तो दिल पे मत लेना, क्योंकि दोस्ती जरा-सी नादान होती है.</string>
    <string name="shayari49">ताज़ी हवा में फूलों की महक हो, पहली किरण में चिड़ियो की चहक हो, जब भी आप अपनी पल्खें खोलो, उन पलखो में खुशियों की झलक हो.</string>
    <string name="shayari50">जब दोस्ती सच्ची और मजबूत होती है, तो उसे जताने की ज़रूरत नही होती है, चाहे दोस्त कितना भी दूर चला जाये, उसे पास लाने की ज़रूरत नही होती है.</string>
    <string name="shayari51">उनकी दोस्ती का हर लम्हा बहुत खूबसूरत है, दोस्ती में यादों का सिलसिला बहुत खूबसूरत है, वो हमे हमेशा तन्हाइयो में याद आया करते है, इसलिये तन्हाइयां हमे महफ़िलो से भी ज़्यादा खूबसूरत हैं.</string>
    <string name="shayari52">सफर है दोस्ती का, जिसका कभी अंत नही होता, दोस्ती है हमारी सबसे प्यारी, जो कभी खत्म नहीं होता.</string>
    <string name="shayari53">आँखों से आँसू क्यों छलक जाते है, तन्हाइयों में गम क्यों याद आते है, आँसू पोछ कर कोई ये बता दे हमसे, दूर रहने वाले अक्सर क्यों याद आते है.</string>
    <string name="shayari54">ज़िन्दगी के सारे गम क्यों बाँट लेते हैं दोस्त, क्यों ज़िन्दगी में साथ देते हैं दोस्त, रिश्ता तो सिर्फ उनसे दिल का होता है जी, फिर भी क्यों हमे अपना मान लेते हैं दोस्त.</string>
    <string name="shayari55">आपकी दोस्ती को दिल में बसा कर रखते हैं, आपकी मुस्कान को आँखों में सजा कर रखते है, हम कभी आपको भुला नही सकते है, इसलिए आपकी यादों को सासों में दबा कर रखते हैं.</string>
    <string name="shayari56">जिंदगी का सफर बहुत अजीब होता है, कभी मुश्किल तो कभी आसान होता है, जब आप जैसे दोस्त हमें मिल जाएं, तो कुछ मुश्किल नहीं सब आसान होता है.</string>
    <string name="shayari57">ये दिन यू ही गुज़र जायँगे, हम दोस्त एक दिन बिछड़ जायँगे, आप नाराज़ ना होना मेरी शरारत से, एक दिन ये पल याद आयगे.</string>
    <string name="shayari58">अच्छा और सच्चा दोस्त एक फूल है, जिसे हम तोड़ भी नही सकते, और अकेला छोड़ भी नही सकते, अगर तोड़ लिया तो मुरझा जायेगा, और छोड़ दिया तो कोई और ले जायेगा.</string>
    <string name="shayari59">हम से भी अच्छा कोई दोस्त बना कर देखना, एक बार तुम ज़रा ये आज़मा कर देखना, फिर हम दोनों की दोस्ती में फर्क तू देखना, फिर एक बार हमारी यादों में खो कर देखना.</string>
    <string name="shayari60">वो दिल क्या जो मिलने की दुआ न करे, तुम्हे भूल कर जियूं ये खुदा न करे, रहे तेरी दोस्ती मेरी ज़िन्दगी बन कर, ये बात और है ज़िन्दगी वफ़ा न करे।</string>
    <string name="shayari61">हम भी दरिया हैं हमें अपना हुनर मालूम है जिस तरफ भी चल पड़ेंगे रास्ता हो जाएगा</string>
    <string name="shayari62">दिल ना-उमीद तो नहीं नाकाम ही तो है लम्बी है ग़म की शाम मगर शाम ही तो है</string>
    <string name="shayari63">हार हो जाती है जब मान लिया जाता है जीत तब होती है जब ठान लिया जाता है</string>
    <string name="shayari64">तू शाहीं है परवाज़ है काम तेरा तिरे सामने आसमाँ और भी हैं</string>
    <string name="shayari65">मंज़िलें क्या हैं, रास्ता क्या है हौसला हो तो फ़ासला क्या है</string>
    <string name="shayari66">हज़ार बर्क़ गिरे लाख आँधियाँ उट्ठें वो फूल खिल के रहेंगे जो खिलने वाले हैं</string>
    <string name="shayari67">कैसे आकाश में सूराख़ नहीं हो सकता एक पत्थर तो तबीअ\'त से उछालो यारो</string>
    <string name="shayari68">जिसकी सोच में खुद्दारी की महक है, जिसके इरादों में हौसले की मिठास है, और जिसकी नियत में सच्चाई का स्वाद है, उसकी पूरी जिन्दगी महकता हुआ गुलाब है।</string>
    <string name="shayari70">ज़मीर जिन्दा रख, कबीर जिंदा रख, सुल्तान भी बन जाये तो, दिल में फ़कीर जिंदा रख, हौसले के तरकश में कोशिश का वो तीर जिंदा रख, हार जा चाहे जिंदगी में सब कुछ, मगर फिर से जीतने की उम्मीद जिंदा रख।</string>
    <string name="shayari71">अगर इन्सान शीक्षा से पहले संस्कार, ब्यापार से पहले व्यवहार, भागवान से पहले माता पिता को पहचान ले तो, ज़िन्दगी में कभी कोई कठिनाई नहीं आएगी</string>
    <string name="shayari72">ताल्लुक़ कौन रखता है किसी नाकाम से लेकिन, मिले जो कामयाबी सारे रिश्ते बोल पड़ते हैं, मेरी खूबी पे रहते हैं यहां, अहल-ए-ज़बां ख़ामोश, मेरे ऐबों पे चर्चा हो तो, गूंगे बोल पड़ते हैं।</string>
    <string name="shayari73">हदे शहर से निकली तो गाँव गाँव चली, कुछ यादें मेरे संग पांव-पांव चली, सफ़र जो धुप का हुआ तो तजुर्बा हुआ, वो जिंदगी ही क्या जो छाँव छाँव चली।</string>
    <string name="shayari74">बहा के पसीना मंजिल को पाना पडता है तरक्कीयां दहेज में नही मिलती इन्हें कमाना पड़ता है</string>
    <string name="shayari75">जिसने कहा कल, दिन गया टल, जिसने कहा परसों,बीत गए बरसो जिसने कहा आज, उसने किया राज।</string>
    <string name="shayari76">जमीन जल चुकी है आसमान बाकि है , वो जो खेतों की मदों पर उदास बैठे हैं, उन्ही की आँखों में अब तक ईमान बाकि है , बादलों अब तो बरस जाओ सूखी जमीनों पर , किसी का घर गिरवी है और किसी का लगान बाकि है ।</string>
    <string name="shayari69">सबब तलाश करो... अपने हार जाने का, किसी की जीत पर रोने से कुछ नहीं होगा।</string>
    <string name="shayari89">बुझी शमां भी जल सकती है तूफान से कश्ती भी निकल सकती है होके मायूस यूं ना अपने इरादे बदल तेरी किस्मत कभी भी बदल सकती है</string>
    <string name="shayari87">जिंदगी बहुत कुछ सिखाती है , कभी हँसाती है तो कभी रुलाती है , पर जो हर हाल में खुश रहते हैं , जिंदगी उन्ही के आगे सर झुकाती है।</string>
    <string name="shayari79">लहरों से डरकर नौका पार नहीं होती हैं, कोशिश करने वालों की हार नहीं होती हैं.</string>
    <string name="shayari80">जो तेरे सामने दूसरों की बुराई करता है, वह दूसरों के सामने तेरी बुराई भी करता होगा !!</string>
</resources>