<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".motivational">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="#01B7FF"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginEnd="110sp">
        </Button>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari61"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari62"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari63"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari64"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:text="@string/shayari65"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@drawable/rectangle"
            android:gravity="center"
            android:text="@string/shayari66"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari67"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari68"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari69"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari70"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari71"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari72"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari73"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari74"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari75"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari76"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:background="@drawable/rectangle"
            android:text="@string/shayari80"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari79"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari87"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari89"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />


    </LinearLayout>


</ScrollView>