<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="30sp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient2"
    tools:context=".MainActivity5">

    <LinearLayout
        android:layout_width="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:backgroundTint="#01B7FF"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:layout_marginEnd="110sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari41"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari42"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari43"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari44"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari45"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari46"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari47"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari48"
            android:textSize="25sp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari49"
            android:textSize="25sp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari50"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari51"
            android:textSize="25sp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari52"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari53"
            android:textSize="25sp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari54"
            android:textSize="25sp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari55"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari56"
            android:textSize="25sp"
            android:background="@drawable/rectangle"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/shayari57"
            android:background="@drawable/rectangle"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari58"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari59"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/shayari60"
            android:background="@drawable/rectangle"
            android:textSize="25sp"
            android:layout_marginTop="10sp"
            android:textColor="@color/black" />

    </LinearLayout>
</ScrollView>